syntax = "proto3";

package health_check;

message Empty {

}

enum ServingStatus {
    NOT_SERVING = 0;
    SERVING = 1;
}

message StatusResponse {
    ServingStatus status = 1;
}

service HealthService {
    rpc Check(Empty) returns (StatusResponse);
}
